# sha

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: sha.h
src/: main.c  sha.c
test/: main.c
